ver. 1.0.1 -- should theoretically render a button if you click on the extension

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Sean's Not Gone!!</title>
   </head>
   <body>
-    <button>He's right here!</button>
+    <div id="main-div">
+      <button id="sean-button">He's right here!</button>
+    </div>
   </body>
   <script src="main.js"></script>
 </html>
