Randomly autoplays a sean mp3 when extension is clicked-- ver. 1.0.4

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <div id="main-div">
-      <button id="sean-button">He's right here!</button>
+      <!-- <button id="sean-button">He's right here!</button> -->
+      <audio autoplay id="sean-audio">
+        <source
+          src="/public/touch-some-grass.mp3"
+          type="audio/mp3"
+          id="sean-audio-source"
+        />
+      </audio>
     </div>
   </body>
   <script src="main.js"></script>
