Revert "Displays sean's face--Initial concept has been fully implemented-- ver. 1.0.5"
This reverts commit 28f06718e0050dc9c60a4cc899868b35d23e0dbf.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="main-div">
-      <img src="/public/seans-lil-face.jpeg" />
+      <!-- <button id="sean-button">He's right here!</button> -->
       <audio autoplay id="sean-audio">
         <source
           src="/public/touch-some-grass.mp3"
