The problem is adding an img element to the html--unclear why that breaks it.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="main-div">
-      <!-- <button id="sean-button">He's right here!</button> -->
+      <!-- <img src="/public/seans-lil-face.jpeg" /> -->
       <audio autoplay id="sean-audio">
         <source
           src="/public/touch-some-grass.mp3"
