As it was on demo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sean's Not Gone!!</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/public/seans-lil-face.jpeg" /> -->
+    <script defer src="main.js"></script>
   </head>
   <body>
     <div id="main-div">
-      <!-- <img src="/public/seans-lil-face.jpeg" /> -->
+      <!-- <h1>Gone...</h1>
+      <h4>... but not forgotten </h4> -->
       <audio autoplay id="sean-audio">
         <source
           src="/public/touch-some-grass.mp3"
@@ -18,6 +19,8 @@
         />
       </audio>
     </div>
+    <div id="image-div">
+      <img src="/public/seans-lil-face.jpeg" id="sean-image" />
+    </div>
   </body>
-  <script src="main.js"></script>
 </html>
